updated rock paper scissor

--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissor</title>
     <script src="gamelogic.js"></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="scoreboard">
+        <div class="playerside">
+          <p id="playerheading">Player:</p>
+
+          <p id="playerscore">0</p>
+        </div>
+        <div class="announcer">
+          <p id="playerchoice"></p>
+          <p id="computerchoice"></p>
+          <p id="narrative">Make a Choice to Begin!</p>
+        </div>
+        <div class="computerside">
+          <p id="computerheading">Computer:</p>
+
+          <p id="computerscore">0</p>
+        </div>
+      </div>
+      <div class="inputs">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+      </div>
+    </div>
+  </body>
 </html>
